; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_fake.c_my_lck_grp_alloc_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_fake.c_my_lck_grp_alloc_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @my_lck_grp_alloc_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @my_lck_grp_alloc_init(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %5 = call i32* (...) @lck_grp_attr_alloc_init()
  store i32* %5, i32** %4, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32* @lck_grp_alloc_init(i8* %6, i32* %7)
  store i32* %8, i32** %3, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @lck_grp_attr_free(i32* %9)
  %11 = load i32*, i32** %3, align 8
  ret i32* %11
}

declare dso_local i32* @lck_grp_attr_alloc_init(...) #1

declare dso_local i32* @lck_grp_alloc_init(i8*, i32*) #1

declare dso_local i32 @lck_grp_attr_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
